 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2764: Add a biginteger and bigdecimal type to pig (jcoveney)

PIG-3073: POUserFunc creating log spam for large scripts (jcoveney)

PIG-3082: outputSchema of a UDF allows two usages when describing a Tuple schema (jcoveney)

PIG-3124:  Push FLATTENs After FILTERs If Possible (nwhite via daijy)

PIG-3086: Allow A Prefix To Be Added To URIs In PigUnit Tests (nwhite via gates)

PIG-3091: Make schema, header and stats file configurable in JsonMetadata (pkommireddi via jcoveney)

PIG-3078: Make a UDF that, given a string, returns just the columns prefixed by that string (jcoveney)

PIG-3090: Introduce a syntax to be able to easily refer to the previously defined relation (jcoveney)

PIG-3057: Make PigStorage.readField() protected (pablomar and billgraham via billgraham)

PIG-2788: improved string interpolation of variables (jcoveney)

PIG-2362: Rework Ant build.xml to use macrodef instead of antcall (azaroth via cheolsoo)

PIG-2857: Add a -tagPath option to PigStorage (prkommireddi via cheolsoo)

PIG-2341: Need better documentation on Pig/HBase integration (jthakrar and billgraham via billgraham)

PIG-3075: Allow AvroStorage STORE Operations To Use Schema Specified By URI (nwhite via cheolsoo)

PIG-3062: Change HBaseStorage to permit overriding pushProjection (billgraham)

PIG-3016: Modernize more tests (jcoveney via cheolsoo)

PIG-2582: Store size in bytes (not mbytes) in ResourceStatistics (prkommireddi via billgraham)

PIG-3006: Modernize a chunk of the tests (jcoveney via cheolsoo)

PIG-2997: Provide a convenience constructor on PigServer that accepts Configuration (prkommireddi via rohini)
