@@ -172,6 +172,33 @@ D = foreach B generate group, MIN (A.gpa). MAX(A.gpa);
 
 </section> 
 
+<!-- ================================================================== -->
+<!-- REDUCER ESTIMATION -->
+<section id="reducer-estimation">
+<title>Reducer Estimation</title>
+
+<p>
+By default Pig determines the number of reducers to use for a given job based on the size of the
+input to the map phase. The input data size is divided by the
+pig.exec.reducers.bytes.per.reducer parameter value (default 1GB) to determine the number of
+reducers. The maximum number of reducers for a job is limited by the pig.exec.reducers.max parameter
+(default 999).
+</p>
+
+<p>
+The default reducer estimation algorithm described above can be overridden by setting the
+pig.exec.reducer.estimator parameter to the fully qualified class name of an implementation of
+<a href="http://svn.apache.org/repos/asf/pig/trunk/src/org/apache/pig/backend/hadoop/executionengine/mapReduceLayer/PigReducerEstimator.java">org.apache.pig.backend.hadoop.executionengine.mapReduceLayer.PigReducerEstimator</a>.
+The class must exist on the classpath of the process submitting the Pig job. If the
+pig.exec.reducer.estimator.arg parameter is set, the value will be passed to a constructor
+of the implementing class that takes a single String.
+</p>
+
+<p>
+</p>
+
+</section>
+
 
 <!-- ==================================================================== -->
 <!-- MULTI-QUERY EXECUTION-->
